--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
       <div class="block_headpicture"></div>
       <p class="text3">Главная</p>
       <p class="text2">Добро пожаловать на самый лучший сайт по продаже шавермы!</p>
-      <a href="couple[].html"><div class="block first_block img1"><div class="inblock">Шаверма для пары</div></div></a>
-      <div class="block img2"><div class="inblock">Мини шаверма</div></div>
-      <div class="block last_block img3"><div class="inblock">Особая шаверма</div></div>
-      <div class="block first_block img4"><div class="inblock">Шаверма обыкновенная</div></div>
-      <div class="block img5"><div class="inblock">Набор шавермы для группы друзей</div></div>
-      <div class="block last_block img6"><div class="inblock">Особый набор с шавермой</div></div>
+      <a href="couple.html"><div class="block first_block img1"><div class="inblock">Шаверма для пары</div></div></a>
+      <a href="mini.html"><div class="block img2"><div class="inblock">Мини шаверма</div></div></a>
+      <a href="special.html"><div class="block last_block img3"><div class="inblock">Особая шаверма</div></div></a>
+      <a href="simple.html"><div class="block first_block img4"><div class="inblock">Шаверма обыкновенная</div></div></a> 
+      <a href="bundle.html"><div class="block img5"><div class="inblock">Особый набор с шавермой</div></div></a> 
+      <a href="group.html"><div class="block last_block img6"><div class="inblock">Набор шавермы для группы друзей</div></div></a>
       <div class="block first_block img7"><div class="inblock">Шаверма с кусочками мяса</div></div>
       <div class="block img8"><div class="inblock">Элитная мини шаверма</div></div>
       <div class="block last_block img9"><div class="inblock">Портативная шаверма</div></div>
