--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <a href="simple.html"><div class="block first_block img4"><div class="inblock">Шаверма обыкновенная</div></div></a> 
       <a href="bundle.html"><div class="block img5"><div class="inblock">Особый набор с шавермой</div></div></a> 
       <a href="group.html"><div class="block last_block img6"><div class="inblock">Набор шавермы для группы друзей</div></div></a>
-      <div class="block first_block img7"><div class="inblock">Шаверма с кусочками мяса</div></div>
-      <div class="block img8"><div class="inblock">Элитная мини шаверма</div></div>
+      <a href="meatpieces.html"><div class="block first_block img7"><div class="inblock">Шаверма с кусочками мяса</div></div></a>
+      <a href="elitemini.html"><div class="block img8"><div class="inblock">Элитная мини шаверма</div></div></a>
       <div class="block last_block img9"><div class="inblock">Портативная шаверма</div></div>
       <div class="block first_block img10"><div class="inblock">Полный обед с шавермой</div></div>
       <div class="block img11"><div class="inblock">Шаверма с соусом</div></div>
