And more editing

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
     </div>
 </main>
 <footer>
-    <div class="footer-box"><p class="text2">Василий одобряет.</p></div>
+    <div class="footer-box"><p class="text2">Производство Локтева Владимира.</p></div>
 </footer>
 </body>
 </html>
