--- a/dessert.html
+++ b/dessert.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <title>Мини шаверма</title>
+  <title>Шаверма на десерт</title>
 </head>
 <body>
 <header>
@@ -24,18 +24,18 @@
 </header>
 <main>
   <div class="space"></div>
-    <div class="block_head img2"><div class='block_headcover'></div></div>
+    <div class="block_head img14"><div class='block_headcover'></div></div>
     <div class="main">
-      <div class="block_headpicture img2"></div>
-      <p class="text3">Мини шаверма</p>
-      <p class="text5">Мы это сделали только, чтобы привлечь любителей маленькой еды. И что им нравится в ней?</p>
+      <div class="block_headpicture img14"></div>
+      <p class="text3">Шаверма на десерт</p>
+      <p class="text5"> ???? </p>
       <div class="space"></div>
-      <button class="buy_button">Купить за 9250000 руб.</button>
+      <button class="buy_button">Купить за ??? руб.</button>
       <div class="space"></div>
     </div>
 </main>
 <footer>
-    <div class="footer-box"><p class="text2">Производство Локтева Владимира.</p></div>
+    <div class="footer-box"><p class="text2">Василий одобряет.</p></div>
 </footer>
 </body>
 </html>
