--- a/elitemini.html
+++ b/elitemini.html
@@ -28,14 +28,14 @@
     <div class="main">
       <div class="block_headpicture img8"></div>
       <p class="text3">Элитная мини шаверма</p>
-      <p class="text5"> ???? </p>
+      <p class="text5">В наш магазин доложили, что тем самым любителям маленькой еды не хватило наполнения нашей обычной мини шавермы (Интересно, с чего это?). Так что мы вам представляем новую... Элитную мини шаверму.</p>
       <div class="space"></div>
-      <button class="buy_button">Купить за ??? руб.</button>
+      <button class="buy_button">Купить за 10000001 руб.</button>
       <div class="space"></div>
     </div>
 </main>
 <footer>
-    <div class="footer-box"><p class="text2">Василий одобряет.</p></div>
+    <div class="footer-box"><p class="text2">Производство Локтева Владимира.</p></div>
 </footer>
 </body>
 </html>
