--- a/meatpieces.html
+++ b/meatpieces.html
@@ -28,14 +28,14 @@
     <div class="main">
       <div class="block_headpicture img7"></div>
       <p class="text3">Шаверма с кусочками мяса</p>
-      <p class="text5">Как вы думаете - Что может улучшить наши шавермы? Но мы вам скажем, что наши шавермы уже совершенны. Просто добавим немного кусочков мяса из магазина напротив и подбросим лимончик к блюду.</p>
+      <p class="text5">Вы возможно видели уже похожую шаверму, но, боже, как вы сильно ошибаетесь: Это наш неповторимый вкус от сына маминой подруги, это наш великолепный дизайн от Илона Маска, и это наши великолепные кусочки мяса из магазига напротив. Совершенно другой опыт в сфере шаверм.</p>
       <div class="space"></div>
-      <button class="buy_button">Купить за 7400 руб.</button>
+      <button class="buy_button">Купить за 7543 руб.</button>
       <div class="space"></div>
     </div>
 </main>
 <footer>
-    <div class="footer-box"><p class="text2">Василий одобряет.</p></div>
+    <div class="footer-box"><p class="text2">Производство Локтева Владимира.</p></div>
 </footer>
 </body>
 </html>
