--- a/veg.html
+++ b/veg.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <title>Мини шаверма</title>
+  <title>Овощная шаверма</title>
 </head>
 <body>
 <header>
@@ -24,13 +24,13 @@
 </header>
 <main>
   <div class="space"></div>
-    <div class="block_head img2"><div class='block_headcover'></div></div>
+    <div class="block_head img13"><div class='block_headcover'></div></div>
     <div class="main">
-      <div class="block_headpicture img2"></div>
-      <p class="text3">Мини шаверма</p>
-      <p class="text5">Мы это сделали только, чтобы привлечь любителей маленькой еды. И что им нравится в ней?</p>
+      <div class="block_headpicture img13"></div>
+      <p class="text3">Овощная шаверма</p>
+      <p class="text5">Представьте себе, что на земле есть такие люди, которые не едят мяса. "Как так?" - спросите вы. Мы тоже не понимаем, но всё равно сделали шаверму, которая исключает из себя наше изумительное мясо тайванских хомякое, и заменяет его непонятными водорослями что-ли (Мы не проверяли)?</p>
       <div class="space"></div>
-      <button class="buy_button">Купить за 9250000 руб.</button>
+      <button class="buy_button">Купить за 16000 руб.</button>
       <div class="space"></div>
     </div>
 </main>
