--- a/couple.html
+++ b/couple.html
@@ -35,7 +35,7 @@
     </div>
 </main>
 <footer>
-    <div class="footer-box"><p class="text2">Василий одобряет.</p></div>
+    <div class="footer-box"><p class="text2">Производство Локтева Владимира.</p></div>
 </footer>
 </body>
 </html>
