--- a/lunch.html
+++ b/lunch.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <title>Мини шаверма</title>
+  <title>Полный обед с шавермой</title>
 </head>
 <body>
 <header>
@@ -24,13 +24,13 @@
 </header>
 <main>
   <div class="space"></div>
-    <div class="block_head img2"><div class='block_headcover'></div></div>
+    <div class="block_head img10"><div class='block_headcover'></div></div>
     <div class="main">
-      <div class="block_headpicture img2"></div>
-      <p class="text3">Мини шаверма</p>
-      <p class="text5">Мы это сделали только, чтобы привлечь любителей маленькой еды. И что им нравится в ней?</p>
+      <div class="block_headpicture img10"></div>
+      <p class="text3">Полный обед с шавермой</p>
+      <p class="text5">Кто-то может подумать: "Да это же тот же самый особый набор с шавермой, только на тарелочке". А мы вам скажем, что на самом деле это просто шаверма на тарелочке. Ну ещё картошечка есть.</p>
       <div class="space"></div>
-      <button class="buy_button">Купить за 9250000 руб.</button>
+      <button class="buy_button">Купить за 5500 руб.</button>
       <div class="space"></div>
     </div>
 </main>
