--- a/portable.html
+++ b/portable.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <title>Мини шаверма</title>
+  <title>Портативная шаверма</title>
 </head>
 <body>
 <header>
@@ -24,13 +24,13 @@
 </header>
 <main>
   <div class="space"></div>
-    <div class="block_head img2"><div class='block_headcover'></div></div>
+    <div class="block_head img9"><div class='block_headcover'></div></div>
     <div class="main">
-      <div class="block_headpicture img2"></div>
-      <p class="text3">Мини шаверма</p>
-      <p class="text5">Мы это сделали только, чтобы привлечь любителей маленькой еды. И что им нравится в ней?</p>
+      <div class="block_headpicture img9"></div>
+      <p class="text3">Портативная шаверма</p>
+      <p class="text5">До сегодняшнего дня мир не знал какого это - брать наши вкуснейшие шавермы с собой. Но вот этот самый "Сегодняшний" день наступил. Специально для вас Илон Маск разработал уникальный способ переносить шавермы с собой (подробности которого мы конечно вам не раскроем). Наслаждайтесь.</p>
       <div class="space"></div>
-      <button class="buy_button">Купить за 9250000 руб.</button>
+      <button class="buy_button">Купить за 21000 руб.</button>
       <div class="space"></div>
     </div>
 </main>
