--- a/square.html
+++ b/square.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <title>Мини шаверма</title>
+  <title>Квадратная шаверма</title>
 </head>
 <body>
 <header>
@@ -24,13 +24,13 @@
 </header>
 <main>
   <div class="space"></div>
-    <div class="block_head img2"><div class='block_headcover'></div></div>
+    <div class="block_head img12"><div class='block_headcover'></div></div>
     <div class="main">
-      <div class="block_headpicture img2"></div>
-      <p class="text3">Мини шаверма</p>
-      <p class="text5">Мы это сделали только, чтобы привлечь любителей маленькой еды. И что им нравится в ней?</p>
+      <div class="block_headpicture img12"></div>
+      <p class="text3">Квадратная шаверма</p>
+      <p class="text5">Квадратная шаверма - это нечто особенное. Она была сделана по особой формуле производства шаверм, приехавшая к нам из далёкого итальянского ресторана в соседнем районе. Конечно вы можете подумать, что это какая-то лазанья. Но вы и тут будете неправы. Лазаньи не делаются из тайванских хомяков.</p>
       <div class="space"></div>
-      <button class="buy_button">Купить за 9250000 руб.</button>
+      <button class="buy_button">Купить за 12040 руб.</button>
       <div class="space"></div>
     </div>
 </main>
