--- a/bought.html
+++ b/bought.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <title>Элитная мини шаверма</title>
+  <title>Спасибо</title>
 </head>
 <body>
 <header>
@@ -17,7 +17,7 @@
   </div>
   <div class="header2">
       <div class="header_buttons">
-          <a href="index.html"><button class="header_button1">Главная</button></a><a href="about.html"><button>О нас</button></a><a href="contacts.html"><button>Контакты</button></a>
+          <a href="index.html"><button class="header_button1">Главная</button></a><button>О нас</button><a href="contacts.html"><button>Контакты</button></a>
       </div>
   </div>
 </div>
@@ -27,10 +27,12 @@
     <div class="block_head img8"><div class='block_headcover'></div></div>
     <div class="main">
       <div class="block_headpicture img8"></div>
-      <p class="text3">Элитная мини шаверма</p>
-      <p class="text5">В наш магазин доложили, что тем самым любителям маленькой еды не хватило наполнения нашей обычной мини шавермы (Интересно, с чего это?). Так что мы вам представляем новую... Элитную мини шаверму.</p>
-      <div class="space"></div>
-      <a href="bought.html"><button class="buy_button">Купить за 10000001 руб.</button></a>
+      <p class="text3">Спасибо за покупку!</p>
+      <p class="text2">Если бы не ты, то мы бы не выжили в этом суровом мире. Но теперь мы явно проживём ещё 2 дня...</p>
+      <p class="text2">Спасибо тебе...</p>
+      <p class="text2">Не забудь съесть свой заказ, иначе он может убежать.</p>
+      <img class="picture" src="images/DogeOnWheels.jpg" alt="Doge">
+      <p class="text2">Молодец!</p>
       <div class="space"></div>
     </div>
 </main>
