--- a/bundle.html
+++ b/bundle.html
@@ -30,7 +30,7 @@
       <p class="text3">Особый набор с шавермой</p>
       <p class="text5">Этот набор был создан совместно с Илоном Маском, который принёс нам картошку фри из Макдональдса, и теперь мы делаем такую же. Но с нашей неповторимой шавермой.</p>
       <div class="space"></div>
-      <button class="buy_button">Купить за 14000 руб.</button>
+      <a href="bought.html"><button class="buy_button">Купить за 14000 руб.</button></a>
       <div class="space"></div>
     </div>
 </main>
