--- a/contacts.html
+++ b/contacts.html
@@ -36,7 +36,7 @@
     </div>
 </main>
 <footer>
-    <div class="footer-box"><p class="text2">Василий одобряет.</p></div>
+    <div class="footer-box"><a href="easteregg.html"><p class="text2">Василий одобряет.</p></a></div>
 </footer>
 </body>
 </html>
