--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <a href="square.html"><div class="block last_block img12"><div class="inblock">Квадратная шаверма</div></div></a>
       <a href="veg.html"><div class="block first_block img13"><div class="inblock">Овощная шаверма</div></div></a>
       <a href="dessert.html"><div class="block img14"><div class="inblock">Шаверма на десерт</div></div></a>
-      <a href="boat.html"><div class="block last_block img15"><div class="inblock">Шаверма лодка</div></div></a>
+      <a href="boat.html"><div class="block last_block img15"><div class="inblock">Шаверма-лодка</div></div></a>
       <div class="space"></div>
     </div>
 </main>
