--- a/simple.html
+++ b/simple.html
@@ -30,7 +30,7 @@
       <p class="text3">Шаверма обыкновенная</p>
       <p class="text5">Не все могут себе позволить шаурму по нашим ценам, что странно, ведь у нас самые лучшие цены в мире. Но несмотря на это мы сделали ещё дешевле, и теперь вы можете насладиться неповторимым вкусом от сына маминой подруги всего за 1000 руб!</p>
       <div class="space"></div>
-      <button class="buy_button">Купить за 12000 руб.</button>
+      <a href="bought.html"><button class="buy_button">Купить за 12000 руб.</button></a>
       <div class="space"></div>
     </div>
 </main>
