--- a/square.html
+++ b/square.html
@@ -30,7 +30,7 @@
       <p class="text3">Квадратная шаверма</p>
       <p class="text5">Квадратная шаверма - это нечто особенное. Она была сделана по особой формуле производства шаверм, приехавшая к нам из далёкого итальянского ресторана в соседнем районе. Конечно вы можете подумать, что это какая-то лазанья. Но вы и тут будете неправы. Лазаньи не делаются из тайванских хомяков.</p>
       <div class="space"></div>
-      <button class="buy_button">Купить за 12040 руб.</button>
+      <a href="bought.html"><button class="buy_button">Купить за 12040 руб.</button></a>
       <div class="space"></div>
     </div>
 </main>
