--- a/boat.html
+++ b/boat.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <title>Шаверма - лодка</title>
+  <title>Шаверма-лодка</title>
 </head>
 <body>
 <header>
@@ -27,10 +27,11 @@
     <div class="block_head img15"><div class='block_headcover'></div></div>
     <div class="main">
       <div class="block_headpicture img15"></div>
-      <p class="text3">Шаверма - лодка</p>
-      <p class="text5"> ???? </p>
+      <p class="text3">Шаверма-лодка</p>
+      <p class="text5">Порой людям просто хочется уплыть от своих проблем проблем. Но для такого дела нужна лодка. Чтож, мы придумали пожалуй лучшее решение для этой проблемы - Шаверма лодка. Особая конструкция корпуса этого деликатеса позволяет находиться ему на плаву. Что позволит вам уплыть почти куда угодно.</p>
+      <p class="text5">Ну а на самом деле эта шаверма просто провалится под вашим весом. Увы.</p>
       <div class="space"></div>
-      <button class="buy_button">Купить за ??? руб.</button>
+      <a href="bought.html"><button class="buy_button">Купить за 30020 руб.</button></a>
       <div class="space"></div>
     </div>
 </main>
