--- a/couple.html
+++ b/couple.html
@@ -30,7 +30,7 @@
       <p class="text3">Шаверма для пары</p>
       <p class="text5">Если вы вдруг удачливый человек, и смогли найти пару. То мы вам можем предложить лучшую шаверму для пар. Она сделана из мяса, хозяева которого так же, как и вы состояли в паре, и они не будут разлучены.</p>
       <div class="space"></div>
-      <button class="buy_button">Купить за 7543 руб.</button>
+      <a href="bought.html"><button class="buy_button">Купить за 7543 руб.</button></a>
       <div class="space"></div>
     </div>
 </main>
