--- a/dessert.html
+++ b/dessert.html
@@ -28,14 +28,15 @@
     <div class="main">
       <div class="block_headpicture img14"></div>
       <p class="text3">Шаверма на десерт</p>
-      <p class="text5"> ???? </p>
+      <p class="text5">Недавно мы поняли, что на нашем сайте слишком много мяса. И последнее, что мы предпринимали - это овощная шаверма. Так не пойдёт. Мы представляем вам то, что вы всегда будете заказывать вместе с нашими обычными шавермами в качестве десерта. Особая конструкция, использующая фрукты и мороженое вместо привычных вам ингредиентов (А ведь это вроде основные элементы десерта). Отсюда и название.</p>
+      <p class="text5">А ещё здесь у нас самая справедливая цена.</p>
       <div class="space"></div>
-      <button class="buy_button">Купить за ??? руб.</button>
+      <a href="bought.html"><button class="buy_button">Купить за 16050 руб.</button></a>
       <div class="space"></div>
     </div>
 </main>
 <footer>
-    <div class="footer-box"><p class="text2">Василий одобряет.</p></div>
+    <div class="footer-box"><p class="text2">Производство Локтева Владимира.</p></div>
 </footer>
 </body>
 </html>
