--- a/group.html
+++ b/group.html
@@ -30,7 +30,7 @@
       <p class="text3">Набор шавермы для группы друзей</p>
       <p class="text5">Если вы такой сверхинтеллектуал, что смогли найти друзей, то мы можем предложить вам неповторимый набор из 6 шаверм, сделаных из пожалуй лучших хомяков в Тайвани.</p>
       <div class="space"></div>
-      <button class="buy_button">Купить за 81000 руб.</button>
+      <a href="bought.html"><button class="buy_button">Купить за 81000 руб.</button></a>
       <div class="space"></div>
     </div>
 </main>
