--- a/lunch.html
+++ b/lunch.html
@@ -30,7 +30,7 @@
       <p class="text3">Полный обед с шавермой</p>
       <p class="text5">Кто-то может подумать: "Да это же тот же самый особый набор с шавермой, только на тарелочке". А мы вам скажем, что на самом деле это просто шаверма на тарелочке. Ну ещё картошечка есть.</p>
       <div class="space"></div>
-      <button class="buy_button">Купить за 5500 руб.</button>
+      <a href="bought.html"><button class="buy_button">Купить за 5500 руб.</button></a>
       <div class="space"></div>
     </div>
 </main>
