--- a/meatpieces.html
+++ b/meatpieces.html
@@ -30,7 +30,7 @@
       <p class="text3">Шаверма с кусочками мяса</p>
       <p class="text5">Вы возможно видели уже похожую шаверму, но, боже, как вы сильно ошибаетесь: Это наш неповторимый вкус от сына маминой подруги, это наш великолепный дизайн от Илона Маска, и это наши великолепные кусочки мяса из магазига напротив. Совершенно другой опыт в сфере шаверм.</p>
       <div class="space"></div>
-      <button class="buy_button">Купить за 7543 руб.</button>
+      <a href="bought.html"><button class="buy_button">Купить за 7543 руб.</button></a>
       <div class="space"></div>
     </div>
 </main>
