--- a/mini.html
+++ b/mini.html
@@ -30,7 +30,7 @@
       <p class="text3">Мини шаверма</p>
       <p class="text5">Мы это сделали только, чтобы привлечь любителей маленькой еды. И что им нравится в ней?</p>
       <div class="space"></div>
-      <button class="buy_button">Купить за 9250000 руб.</button>
+      <a href="bought.html"><button class="buy_button">Купить за 9250000 руб.</button></a>
       <div class="space"></div>
     </div>
 </main>
