--- a/portable.html
+++ b/portable.html
@@ -30,7 +30,7 @@
       <p class="text3">Портативная шаверма</p>
       <p class="text5">До сегодняшнего дня мир не знал какого это - брать наши вкуснейшие шавермы с собой. Но вот этот самый "Сегодняшний" день наступил. Специально для вас Илон Маск разработал уникальный способ переносить шавермы с собой (подробности которого мы конечно вам не раскроем). Наслаждайтесь.</p>
       <div class="space"></div>
-      <button class="buy_button">Купить за 21000 руб.</button>
+      <a href="bought.html"><button class="buy_button">Купить за 21000 руб.</button></a>
       <div class="space"></div>
     </div>
 </main>
