--- a/sause.html
+++ b/sause.html
@@ -28,14 +28,14 @@
     <div class="main">
       <div class="block_headpicture img11"></div>
       <p class="text3">Шаверма с соусом</p>
-      <p class="text5"> ???? </p>
+      <p class="text5">Шаг первый: Возьмите состоящююся в народе шаверму. Шаг второй: Добавьте к ней качественный соус из Макдональдса. Готово. Биг Шак одобряет.</p>
       <div class="space"></div>
-      <button class="buy_button">Купить за ??? руб.</button>
+      <a href="bought.html"><button class="buy_button">Купить за 31000 руб.</button></a>
       <div class="space"></div>
     </div>
 </main>
 <footer>
-    <div class="footer-box"><p class="text2">Василий одобряет.</p></div>
+    <div class="footer-box"><p class="text2">Производство Локтева Владимира.</p></div>
 </footer>
 </body>
 </html>
