--- a/special.html
+++ b/special.html
@@ -30,7 +30,7 @@
       <p class="text3">Особая шаверма</p>
       <p class="text5">Одна из лучших шаверм в своём виде. Качественное мясо, взятое из самых лучших ресторанов. Если вы до этого никогда не пробовали шаурму, то мы вам рекомендуем именно эту.</p>
       <div class="space"></div>
-      <button class="buy_button">Купить за 3500 руб.</button>
+      <a href="bought.html"><button class="buy_button">Купить за 3500 руб.</button></a>
       <div class="space"></div>
     </div>
 </main>
