--- a/bought.html
+++ b/bought.html
@@ -17,7 +17,7 @@
   </div>
   <div class="header2">
       <div class="header_buttons">
-          <a href="index.html"><button class="header_button1">Главная</button></a><button>О нас</button><a href="contacts.html"><button>Контакты</button></a>
+          <a href="index.html"><button class="header_button1">Главная</button></a><a href="about.html"><button>О нас</button></a><a href="contacts.html"><button>Контакты</button></a>
       </div>
   </div>
 </div>
