--- a/veg.html
+++ b/veg.html
@@ -28,7 +28,7 @@
     <div class="main">
       <div class="block_headpicture img13"></div>
       <p class="text3">Овощная шаверма</p>
-      <p class="text5">Представьте себе, что на земле есть такие люди, которые не едят мяса. "Как так?" - спросите вы. Мы тоже не понимаем, но всё равно сделали шаверму, которая исключает из себя наше изумительное мясо тайванских хомякое, и заменяет его непонятными водорослями что-ли (Мы не проверяли)?</p>
+      <p class="text5">Представьте себе, что на земле есть такие люди, которые не едят мяса. "Как так?" - спросите вы. Мы тоже не понимаем, но всё равно сделали шаверму, которая исключает из себя наше изумительное мясо тайванских хомяков, и заменяет его непонятными водорослями что-ли (Мы не проверяли)?</p>
       <div class="space"></div>
       <a href="bought.html"><button class="buy_button">Купить за 16000 руб.</button></a>
       <div class="space"></div>
