--- a/mini.html
+++ b/mini.html
@@ -12,7 +12,7 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-        <p class="text1">Вселенская Мощь</p>
+      <a href="index.html"><p class="text1">Вселенская Мощь</p></a>
     </div>
   </div>
   <div class="header2">
