--- a/contacts.html
+++ b/contacts.html
@@ -24,9 +24,9 @@
 </header>
 <main>
   <div class="space"></div>
-    <div class="block_head img5"><div class='block_headcover'></div></div>
+    <div class="block_head block_head_animation"><div class='block_headcover'></div></div>
     <div class="main">
-      <div class="block_headpicture img5"></div>
+      <div class="block_headpicture block_headpicture_animation"></div>
       <p class="text3">Контакты</p>
       <div class="block2"><img class="inblock2" src="images/VasyaKatlabygaInHisTown.jpg" alt="Vasya"><p class="text4">Василий Катлабуга - Духовный наставник и лидер проекта.</p><p class="text4">VasyokTheCoolest@info.com</p></div>
       <div class="block2"><img class="inblock2" src="images/AndrewTheAvatar.png" alt="Andrew"> <p class="text4">Андрей Давидян - Певун, написавший саундтрек к рекламе и менеджер проекта.</p><p class="text4">AndrewDavidian@info.com</p></div>
