--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 </header>
 <main>
   <div class="space"></div>
-    <div class="block_head"><div class='block_headcover'></div></div>
+    <div class="block_head block_head_animation"><div class='block_headcover'></div></div>
     <div class="main">
-      <div class="block_headpicture"></div>
+      <div class="block_headpicture block_headpicture_animation"></div>
       <p class="text3">Главная</p>
       <p class="text2">Добро пожаловать на самый лучший сайт по продаже шавермы!</p>
       <a href="couple.html"><div class="block first_block img1"><div class="inblock">Шаверма для пары</div></div></a>
