--- a/about.html
+++ b/about.html
@@ -24,9 +24,9 @@
 </header>
 <main>
   <div class="space"></div>
-    <div class="block_head img13"><div class='block_headcover'></div></div>
+    <div class="block_head block_head_animation"><div class='block_headcover'></div></div>
     <div class="main">
-      <div class="block_headpicture img13"></div>
+      <div class="block_headpicture block_headpicture_animation"></div>
       <p class="text3">О нашей шаверме</p>
       <p class="text5">В нашем магазине, который находится в прекрасной независимой Северной корее, продаётся пожалуй лучшая шаверма в истории! Как вы сможете отказать нам, когда наша сочная, приготовленная сыном маминой подруги шаверма,</p>
       <img class="picture" src="images/Cook.jpg" alt="Сын Маминой Подруги">
