Final version (possible updates)

--- a/boat.html
+++ b/boat.html
@@ -12,7 +12,7 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-      <a href="index.html"><p class="text1">Вселенская Мощь</p></a>
+      <a href="index.html"><h1 class="text1">Вселенская Мощь</h1></a>
     </div>
   </div>
   <div class="header2">
@@ -27,7 +27,7 @@
     <div class="block_head img15"><div class='block_headcover'></div></div>
     <div class="main">
       <div class="block_headpicture img15"></div>
-      <p class="text3">Шаверма-лодка</p>
+      <h2 class="text3">Шаверма-лодка</h2>
       <p class="text5">Порой людям просто хочется уплыть от своих проблем. Но для такого дела нужна лодка. Чтож, мы придумали пожалуй лучшее решение для этой проблемы - Шаверма лодка. Особая конструкция корпуса этого деликатеса позволяет находиться ему на плаву. Что позволит вам уплыть почти куда угодно.</p>
       <p class="text5">Ну а на самом деле эта шаверма просто провалится под вашим весом. Увы.</p>
       <div class="space"></div>
