--- a/bought.html
+++ b/bought.html
@@ -12,7 +12,7 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-      <a href="index.html"><p class="text1">Вселенская Мощь</p></a>
+      <a href="index.html"><h1 class="text1">Вселенская Мощь</h1></a>
     </div>
   </div>
   <div class="header2">
@@ -27,7 +27,7 @@
     <div class="block_head img8"><div class='block_headcover'></div></div>
     <div class="main">
       <div class="block_headpicture img8"></div>
-      <p class="text3">Спасибо за покупку!</p>
+      <h2 class="text3">Спасибо за покупку!</h2>
       <p class="text2">Если бы не ты, то мы бы не выжили в этом суровом мире. Но теперь мы явно проживём ещё 2 дня...</p>
       <p class="text2">Спасибо тебе...</p>
       <p class="text2">Не забудь съесть свой заказ, иначе он может убежать.</p>
