--- a/bundle.html
+++ b/bundle.html
@@ -12,7 +12,7 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-      <a href="index.html"><p class="text1">Вселенская Мощь</p></a>
+      <a href="index.html"><h1 class="text1">Вселенская Мощь</h1></a>
     </div>
   </div>
   <div class="header2">
@@ -27,7 +27,7 @@
     <div class="block_head img5"><div class='block_headcover'></div></div>
     <div class="main">
       <div class="block_headpicture img5"></div>
-      <p class="text3">Особый набор с шавермой</p>
+      <h2 class="text3">Особый набор с шавермой</h2>
       <p class="text5">Этот набор был создан совместно с Илоном Маском, который принёс нам картошку фри из Макдональдса, и теперь мы делаем такую же. Но с нашей неповторимой шавермой.</p>
       <div class="space"></div>
       <a href="bought.html"><button class="buy_button">Купить за 14000 руб.</button></a>
