--- a/contacts.html
+++ b/contacts.html
@@ -12,7 +12,7 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-      <a href="index.html"><p class="text1">Вселенская Мощь</p></a>
+      <a href="index.html"><h1 class="text1">Вселенская Мощь</h1></a>
     </div>
   </div>
   <div class="header2">
@@ -27,7 +27,7 @@
     <div class="block_head block_head_animation"><div class='block_headcover'></div></div>
     <div class="main">
       <div class="block_headpicture block_headpicture_animation"></div>
-      <p class="text3">Контакты</p>
+      <h2 class="text3">Контакты</h2>
       <div class="block2"><img class="inblock2" src="images/VasyaKatlabygaInHisTown.jpg" alt="Vasya"><p class="text4">Василий Катлабуга - Духовный наставник и лидер проекта.</p><p class="text4">VasyokTheCoolest@info.com</p></div>
       <div class="block2"><img class="inblock2" src="images/AndrewTheAvatar.png" alt="Andrew"> <p class="text4">Андрей Давидян - Певун, написавший саундтрек к рекламе и менеджер проекта.</p><p class="text4">AndrewDavidian@info.com</p></div>
       <div class="block2"><img class="inblock2" src="images/ElonMusk2.jpg" alt="Elon"><p class="text4">Илон Маск - Человек, который проходил мимо, но всё же помог нам всем</p><p class="text4">YaNeznauEgoEmail@info.com</p></div>
