--- a/couple.html
+++ b/couple.html
@@ -12,7 +12,7 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-      <a href="index.html"><p class="text1">Вселенская Мощь</p></a>
+      <a href="index.html"><h1 class="text1">Вселенская Мощь</h1></a>
     </div>
   </div>
   <div class="header2">
@@ -27,7 +27,7 @@
     <div class="block_head img1"><div class='block_headcover'></div></div>
     <div class="main">
       <div class="block_headpicture img1"></div>
-      <p class="text3">Шаверма для пары</p>
+      <h2 class="text3">Шаверма для пары</h2>
       <p class="text5">Если вы вдруг удачливый человек, и смогли найти пару. То мы вам можем предложить лучшую шаверму для пар. Она сделана из мяса, хозяева которого так же, как и вы состояли в паре, и они не будут разлучены.</p>
       <div class="space"></div>
       <a href="bought.html"><button class="buy_button">Купить за 7543 руб.</button></a>
