--- a/dessert.html
+++ b/dessert.html
@@ -12,7 +12,7 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-      <a href="index.html"><p class="text1">Вселенская Мощь</p></a>
+      <a href="index.html"><h1 class="text1">Вселенская Мощь</h1></a>
     </div>
   </div>
   <div class="header2">
@@ -27,7 +27,7 @@
     <div class="block_head img14"><div class='block_headcover'></div></div>
     <div class="main">
       <div class="block_headpicture img14"></div>
-      <p class="text3">Шаверма на десерт</p>
+      <h2 class="text3">Шаверма на десерт</h2>
       <p class="text5">Недавно мы поняли, что на нашем сайте слишком много мяса. И последнее, что мы предпринимали - это овощная шаверма. Так не пойдёт. Мы представляем вам то, что вы всегда будете заказывать вместе с нашими обычными шавермами в качестве десерта. Особая конструкция, использующая фрукты и мороженое вместо привычных вам ингредиентов (А ведь это вроде основные элементы десерта). Отсюда и название.</p>
       <p class="text5">А ещё здесь у нас самая справедливая цена.</p>
       <div class="space"></div>
