--- a/elitemini.html
+++ b/elitemini.html
@@ -12,7 +12,7 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-      <a href="index.html"><p class="text1">Вселенская Мощь</p></a>
+      <a href="index.html"><h1 class="text1">Вселенская Мощь</h1></a>
     </div>
   </div>
   <div class="header2">
@@ -27,7 +27,7 @@
     <div class="block_head img8"><div class='block_headcover'></div></div>
     <div class="main">
       <div class="block_headpicture img8"></div>
-      <p class="text3">Элитная мини шаверма</p>
+      <h2 class="text3">Элитная мини шаверма</h2>
       <p class="text5">В наш магазин доложили, что тем самым любителям маленькой еды не хватило наполнения нашей обычной мини шавермы (Интересно, с чего это?). Так что мы вам представляем новую... Элитную мини шаверму.</p>
       <div class="space"></div>
       <a href="bought.html"><button class="buy_button">Купить за 10000001 руб.</button></a>
