--- a/group.html
+++ b/group.html
@@ -12,7 +12,7 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-      <a href="index.html"><p class="text1">Вселенская Мощь</p></a>
+      <a href="index.html"><h1 class="text1">Вселенская Мощь</h1></a>
     </div>
   </div>
   <div class="header2">
@@ -27,7 +27,7 @@
     <div class="block_head img6"><div class='block_headcover'></div></div>
     <div class="main">
       <div class="block_headpicture img6"></div>
-      <p class="text3">Набор шавермы для группы друзей</p>
+      <h2 class="text3">Набор шавермы для группы друзей</h2>
       <p class="text5">Если вы такой сверхинтеллектуал, что смогли найти друзей, то мы можем предложить вам неповторимый набор из 6 шаверм, сделаных из пожалуй лучших хомяков в Тайвани.</p>
       <div class="space"></div>
       <a href="bought.html"><button class="buy_button">Купить за 81000 руб.</button></a>
