--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
   <title>Вселенская Мощь</title>
@@ -12,7 +12,7 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-      <a href="index.html"><p class="text1">Вселенская Мощь</p></a>
+      <a href="index.html"><h1 class="text1">Вселенская Мощь</h1></a>
     </div>
   </div>
   <div class="header2">
@@ -27,7 +27,7 @@
     <div class="block_head block_head_animation"><div class='block_headcover'></div></div>
     <div class="main">
       <div class="block_headpicture block_headpicture_animation"></div>
-      <p class="text3">Главная</p>
+      <h2 class="text3">Главная</h2>
       <p class="text2">Добро пожаловать на самый лучший сайт по продаже шавермы!</p>
       <a href="couple.html"><div class="block first_block img1"><div class="inblock">Шаверма для пары</div></div></a>
       <a href="mini.html"><div class="block img2"><div class="inblock">Мини шаверма</div></div></a>
