--- a/lunch.html
+++ b/lunch.html
@@ -12,7 +12,7 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-      <a href="index.html"><p class="text1">Вселенская Мощь</p></a>
+      <a href="index.html"><h1 class="text1">Вселенская Мощь</h1></a>
     </div>
   </div>
   <div class="header2">
@@ -27,7 +27,7 @@
     <div class="block_head img10"><div class='block_headcover'></div></div>
     <div class="main">
       <div class="block_headpicture img10"></div>
-      <p class="text3">Полный обед с шавермой</p>
+      <h2 class="text3">Полный обед с шавермой</h2>
       <p class="text5">Кто-то может подумать: "Да это же тот же самый особый набор с шавермой, только на тарелочке". А мы вам скажем, что на самом деле это просто шаверма на тарелочке. Ну ещё картошечка есть.</p>
       <div class="space"></div>
       <a href="bought.html"><button class="buy_button">Купить за 5500 руб.</button></a>
