--- a/meatpieces.html
+++ b/meatpieces.html
@@ -12,7 +12,7 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-      <a href="index.html"><p class="text1">Вселенская Мощь</p></a>
+      <a href="index.html"><h1 class="text1">Вселенская Мощь</h1></a>
     </div>
   </div>
   <div class="header2">
@@ -27,7 +27,7 @@
     <div class="block_head img7"><div class='block_headcover'></div></div>
     <div class="main">
       <div class="block_headpicture img7"></div>
-      <p class="text3">Шаверма с кусочками мяса</p>
+      <h2 class="text3">Шаверма с кусочками мяса</h2>
       <p class="text5">Вы возможно видели уже похожую шаверму, но, боже, как вы сильно ошибаетесь: Это наш неповторимый вкус от сына маминой подруги, это наш великолепный дизайн от Илона Маска, и это наши великолепные кусочки мяса из магазига напротив. Совершенно другой опыт в сфере шаверм.</p>
       <div class="space"></div>
       <a href="bought.html"><button class="buy_button">Купить за 7543 руб.</button></a>
