--- a/mini.html
+++ b/mini.html
@@ -12,7 +12,7 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-      <a href="index.html"><p class="text1">Вселенская Мощь</p></a>
+      <a href="index.html"><h1 class="text1">Вселенская Мощь</h1></a>
     </div>
   </div>
   <div class="header2">
@@ -27,7 +27,7 @@
     <div class="block_head img2"><div class='block_headcover'></div></div>
     <div class="main">
       <div class="block_headpicture img2"></div>
-      <p class="text3">Мини шаверма</p>
+      <h2 class="text3">Мини шаверма</h2>
       <p class="text5">Мы это сделали только, чтобы привлечь любителей маленькой еды. И что им нравится в ней?</p>
       <div class="space"></div>
       <a href="bought.html"><button class="buy_button">Купить за 9250000 руб.</button></a>
