--- a/portable.html
+++ b/portable.html
@@ -12,7 +12,7 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-      <a href="index.html"><p class="text1">Вселенская Мощь</p></a>
+      <a href="index.html"><h1 class="text1">Вселенская Мощь</h1></a>
     </div>
   </div>
   <div class="header2">
@@ -27,7 +27,7 @@
     <div class="block_head img9"><div class='block_headcover'></div></div>
     <div class="main">
       <div class="block_headpicture img9"></div>
-      <p class="text3">Портативная шаверма</p>
+      <h2 class="text3">Портативная шаверма</h2>
       <p class="text5">До сегодняшнего дня мир не знал какого это - брать наши вкуснейшие шавермы с собой. Но вот этот самый "Сегодняшний" день наступил. Специально для вас Илон Маск разработал уникальный способ переносить шавермы с собой (подробности которого мы конечно вам не раскроем). Наслаждайтесь.</p>
       <div class="space"></div>
       <a href="bought.html"><button class="buy_button">Купить за 21000 руб.</button></a>
