--- a/simple.html
+++ b/simple.html
@@ -12,7 +12,7 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-      <a href="index.html"><p class="text1">Вселенская Мощь</p></a>
+      <a href="index.html"><h1 class="text1">Вселенская Мощь</h1></a>
     </div>
   </div>
   <div class="header2">
@@ -27,7 +27,7 @@
     <div class="block_head img4"><div class='block_headcover'></div></div>
     <div class="main">
       <div class="block_headpicture img4"></div>
-      <p class="text3">Шаверма обыкновенная</p>
+      <h2 class="text3">Шаверма обыкновенная</h2>
       <p class="text5">Не все могут себе позволить шаурму по нашим ценам, что странно, ведь у нас самые лучшие цены в мире. Но несмотря на это мы сделали ещё дешевле, и теперь вы можете насладиться неповторимым вкусом от сына маминой подруги всего за 1000 руб!</p>
       <div class="space"></div>
       <a href="bought.html"><button class="buy_button">Купить за 12000 руб.</button></a>
