--- a/square.html
+++ b/square.html
@@ -12,7 +12,7 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-      <a href="index.html"><p class="text1">Вселенская Мощь</p></a>
+      <a href="index.html"><h1 class="text1">Вселенская Мощь</h1></a>
     </div>
   </div>
   <div class="header2">
@@ -27,7 +27,7 @@
     <div class="block_head img12"><div class='block_headcover'></div></div>
     <div class="main">
       <div class="block_headpicture img12"></div>
-      <p class="text3">Квадратная шаверма</p>
+      <h2 class="text3">Квадратная шаверма</h2>
       <p class="text5">Квадратная шаверма - это нечто особенное. Она была сделана по особой формуле производства шаверм, приехавшая к нам из далёкого итальянского ресторана в соседнем районе. Конечно вы можете подумать, что это какая-то лазанья. Но вы и тут будете неправы. Лазаньи не делаются из тайванских хомяков.</p>
       <div class="space"></div>
       <a href="bought.html"><button class="buy_button">Купить за 12040 руб.</button></a>
