--- a/veg.html
+++ b/veg.html
@@ -12,7 +12,7 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-      <a href="index.html"><p class="text1">Вселенская Мощь</p></a>
+      <a href="index.html"><h1 class="text1">Вселенская Мощь</h1></a>
     </div>
   </div>
   <div class="header2">
@@ -27,7 +27,7 @@
     <div class="block_head img13"><div class='block_headcover'></div></div>
     <div class="main">
       <div class="block_headpicture img13"></div>
-      <p class="text3">Овощная шаверма</p>
+      <h2 class="text3">Овощная шаверма</h2>
       <p class="text5">Представьте себе, что на земле есть такие люди, которые не едят мяса. "Как так?" - спросите вы. Мы тоже не понимаем, но всё равно сделали шаверму, которая исключает из себя наше изумительное мясо тайванских хомяков, и заменяет его непонятными водорослями что-ли (Мы не проверяли)?</p>
       <div class="space"></div>
       <a href="bought.html"><button class="buy_button">Купить за 16000 руб.</button></a>
