--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-      <a href="index.html"><p class="text1">Вселенская Мощь</p></a>
+      <a href="index.html"><h1 class="text1">Вселенская Мощь</h1></a>
     </div>
   </div>
   <div class="header2">
@@ -27,7 +27,7 @@
     <div class="block_head block_head_animation"><div class='block_headcover'></div></div>
     <div class="main">
       <div class="block_headpicture block_headpicture_animation"></div>
-      <p class="text3">О нашей шаверме</p>
+      <h2 class="text3">О нашей шаверме</h2>
       <p class="text5">В нашем магазине, который находится в прекрасной независимой Северной корее, продаётся пожалуй лучшая шаверма в истории! Как вы сможете отказать нам, когда наша сочная, приготовленная сыном маминой подруги шаверма,</p>
       <img class="picture" src="images/Cook.jpg" alt="Сын Маминой Подруги">
       <p class="text5">продаётся вам из рук Илона Маска, который и придумал эту идею (SpaceEx и Tesla больше никому не нужны).</p>
