--- a/sause.html
+++ b/sause.html
@@ -12,7 +12,7 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-      <a href="index.html"><p class="text1">Вселенская Мощь</p></a>
+      <a href="index.html"><h1 class="text1">Вселенская Мощь</h1></a>
     </div>
   </div>
   <div class="header2">
@@ -27,7 +27,7 @@
     <div class="block_head img11"><div class='block_headcover'></div></div>
     <div class="main">
       <div class="block_headpicture img11"></div>
-      <p class="text3">Шаверма с соусом</p>
+      <h2 class="text3">Шаверма с соусом</h2>
       <p class="text5">Шаг первый: Возьмите состоящююся в народе шаверму. Шаг второй: Добавьте к ней качественный соус из Макдональдса. Готово. Биг Шак одобряет.</p>
       <div class="space"></div>
       <a href="bought.html"><button class="buy_button">Купить за 31000 руб.</button></a>
