--- a/special.html
+++ b/special.html
@@ -12,7 +12,7 @@
 <div class="header">
   <div class="header1">
     <div class="header3">
-      <a href="index.html"><p class="text1">Вселенская Мощь</p></a>
+      <a href="index.html"><h1 class="text1">Вселенская Мощь</h1></a>
     </div>
   </div>
   <div class="header2">
@@ -27,7 +27,7 @@
     <div class="block_head img3"><div class='block_headcover'></div></div>
     <div class="main">
       <div class="block_headpicture img3"></div>
-      <p class="text3">Особая шаверма</p>
+      <h2 class="text3">Особая шаверма</h2>
       <p class="text5">Одна из лучших шаверм в своём виде. Качественное мясо, взятое из самых лучших ресторанов. Если вы до этого никогда не пробовали шаурму, то мы вам рекомендуем именно эту.</p>
       <div class="space"></div>
       <a href="bought.html"><button class="buy_button">Купить за 3500 руб.</button></a>
