--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
       <p class="text5">В нашем магазине, который находится в прекрасной независимой Северной корее, продаётся пожалуй лучшая шаверма в истории! Как вы сможете отказать нам, когда наша сочная, приготовленная сыном маминой подруги шаверма,</p>
       <img class="picture" src="images/Cook.jpg" alt="Сын Маминой Подруги">
       <p class="text5">продаётся вам из рук Илона Маска, который и придумал эту идею (SpaceEx и Tesla больше никому не нужны).</p>
-      <img class="picture" src="images/ElonMusk1.jpg" alt="Илон Маск">
+      <img class="picture2" src="images/ElonMusk1.jpg" alt="Илон Маск">
       <div class="space"></div>
     </div>
 </main>
