--- a/bought.html
+++ b/bought.html
@@ -24,9 +24,9 @@
 </header>
 <main>
   <div class="space"></div>
-    <div class="block_head img8"><div class='block_headcover'></div></div>
+    <div class="block_head block_head_animation"><div class='block_headcover'></div></div>
     <div class="main">
-      <div class="block_headpicture img8"></div>
+      <div class="block_headpicture block_headcover_animation"></div>
       <h2 class="text3">Спасибо за покупку!</h2>
       <p class="text2">Если бы не ты, то мы бы не выжили в этом суровом мире. Но теперь мы явно проживём ещё 2 дня...</p>
       <p class="text2">Спасибо тебе...</p>
