--- a/about.html
+++ b/about.html
@@ -29,9 +29,9 @@
       <div class="block_headpicture block_headpicture_animation"></div>
       <h2 class="text3">О нашей шаверме</h2>
       <p class="text5">В нашем магазине, который находится в прекрасной независимой Северной корее, продаётся пожалуй лучшая шаверма в истории! Как вы сможете отказать нам, когда наша сочная, приготовленная сыном маминой подруги шаверма,</p>
-      <img class="picture" src="images/Cook.jpg" alt="Сын Маминой Подруги">
+      <img class="picture2" src="images/Cook.jpg" alt="Сын Маминой Подруги">
       <p class="text5">продаётся вам из рук Илона Маска, который и придумал эту идею (SpaceEx и Tesla больше никому не нужны).</p>
-      <img class="picture2" src="images/ElonMusk1.jpg" alt="Илон Маск">
+      <img class="picture" src="images/ElonMusk1.jpg" alt="Илон Маск">
       <div class="space"></div>
     </div>
 </main>
