--- a/sause.html
+++ b/sause.html
@@ -29,7 +29,7 @@
     <div class="main">
       <div class="block_headpicture img11"></div>
       <h2 class="text3">Шаверма с соусом</h2>
-      <p class="text5">Шаг первый: Возьмите состоящююся в народе шаверму. Шаг второй: Добавьте к ней качественный соус из Макдональдса. Готово. Биг Шак одобряет.</p>
+      <p class="text5">Шаг первый: Возьмите состоявшуюся в народе шаверму. Шаг второй: Добавьте к ней качественный соус из Макдональдса. Готово. Биг Шак одобряет.</p>
       <div class="space"></div>
       <a href="bought.html"><button class="buy_button">Купить за 31000 руб.</button></a>
       <div class="space"></div>
