Wow. Mobile adaptation

--- a/contacts.html
+++ b/contacts.html
@@ -29,10 +29,10 @@
     <div class="main">
       <div class="block_headpicture block_headpicture_animation"></div>
       <h2 class="text3">Контакты</h2>
-      <div class="block2"><img class="inblock2" src="images/VasyaKatlabygaInHisTown.jpg" alt="Vasya"><p class="text4">Василий Катлабуга - Духовный наставник и лидер проекта.</p><p class="text4">VasyokTheCoolest@info.com</p></div>
-      <div class="block2"><img class="inblock2" src="images/AndrewTheAvatar.png" alt="Andrew"> <p class="text4">Андрей Давидян - Певун, написавший саундтрек к рекламе и менеджер проекта.</p><p class="text4">AndrewDavidian@info.com</p></div>
-      <div class="block2"><img class="inblock2" src="images/ElonMusk2.jpg" alt="Elon"><p class="text4">Илон Маск - Человек, который проходил мимо, но всё же помог нам всем</p><p class="text4">YaNeznauEgoEmail@info.com</p></div>
-      <div class="block2"><img class="inblock2" src="images/Cook.jpg" alt="Elon"><p class="text4">Сын маминой подруги - Он всё равно лучше всех. Поэтому и повар.</p><p class="text4">WonderMan@SuperDuperInfo.com</p></div>
+      <div class="block2"><img class="inblock2" src="images/VasyaKatlabygaInHisTown.jpg" alt="Vasya"><p class="text4">Василий Катлабуга - Духовный наставник и лидер проекта.</p><p class="text4 small">VasyokTheCoolest@info.com</p></div>
+      <div class="block2"><img class="inblock2" src="images/AndrewTheAvatar.png" alt="Andrew"> <p class="text4">Андрей Давидян - Певун, написавший саундтрек к рекламе и менеджер проекта.</p><p class="text4 small">AndrewDavidian@info.com</p></div>
+      <div class="block2"><img class="inblock2" src="images/ElonMusk2.jpg" alt="Elon"><p class="text4">Илон Маск - Человек, который проходил мимо, но всё же помог нам всем</p><p class="text4 small">YaNeznauEgoEmail@info.com</p></div>
+      <div class="block2"><img class="inblock2" src="images/Cook.jpg" alt="Son"><p class="text4">Сын маминой подруги - Он всё равно лучше всех. Поэтому и повар.</p><p class="text4 small">WonderMan@SuperDuperInfo.com</p></div>
       <div class="space"></div>
     </div>
 </main>
