--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
       <div class="block_headpicture block_headpicture_animation"></div>
       <h2 class="text3">Главная</h2>
       <p class="text2">Добро пожаловать на самый лучший сайт по продаже шавермы!</p>
-      <a href="couple.html"><div class="block first_block img1"><div class="inblock">Шаверма для пары</div></div></a>
+      <a href="couple.html"><div class="block img1"><div class="inblock">Шаверма для пары</div></div></a>
       <a href="mini.html"><div class="block img2"><div class="inblock">Мини шаверма</div></div></a>
-      <a href="special.html"><div class="block last_block img3"><div class="inblock">Особая шаверма</div></div></a>
-      <a href="simple.html"><div class="block first_block img4"><div class="inblock">Шаверма обыкновенная</div></div></a>
+      <a href="special.html"><div class="block img3"><div class="inblock">Особая шаверма</div></div></a>
+      <a href="simple.html"><div class="block img4"><div class="inblock">Шаверма обыкновенная</div></div></a>
       <a href="bundle.html"><div class="block img5"><div class="inblock">Особый набор с шавермой</div></div></a> 
-      <a href="group.html"><div class="block last_block img6"><div class="inblock">Набор шавермы для группы друзей</div></div></a>
-      <a href="meatpieces.html"><div class="block first_block img7"><div class="inblock">Шаверма с кусочками мяса</div></div></a>
+      <a href="group.html"><div class="block img6"><div class="inblock">Набор шавермы для группы друзей</div></div></a>
+      <a href="meatpieces.html"><div class="block img7"><div class="inblock">Шаверма с кусочками мяса</div></div></a>
       <a href="elitemini.html"><div class="block img8"><div class="inblock">Элитная мини шаверма</div></div></a>
-      <a href="portable.html"><div class="block last_block img9"><div class="inblock">Портативная шаверма</div></div></a>
-      <a href="lunch.html"><div class="block first_block img10"><div class="inblock">Полный обед с шавермой</div></div></a>
+      <a href="portable.html"><div class="block img9"><div class="inblock">Портативная шаверма</div></div></a>
+      <a href="lunch.html"><div class="block img10"><div class="inblock">Полный обед с шавермой</div></div></a>
       <a href="sause.html"><div class="block img11"><div class="inblock">Шаверма с соусом</div></div></a>
-      <a href="square.html"><div class="block last_block img12"><div class="inblock">Квадратная шаверма</div></div></a>
-      <a href="veg.html"><div class="block first_block img13"><div class="inblock">Овощная шаверма</div></div></a>
+      <a href="square.html"><div class="block img12"><div class="inblock">Квадратная шаверма</div></div></a>
+      <a href="veg.html"><div class="block img13"><div class="inblock">Овощная шаверма</div></div></a>
       <a href="dessert.html"><div class="block img14"><div class="inblock">Шаверма на десерт</div></div></a>
-      <a href="boat.html"><div class="block last_block img15"><div class="inblock">Шаверма-лодка</div></div></a>
+      <a href="boat.html"><div class="block img15"><div class="inblock">Шаверма-лодка</div></div></a>
       <div class="space"></div>
     </div>
 </main>
