--- a/meatpieces.html
+++ b/meatpieces.html
@@ -29,7 +29,7 @@
     <div class="main">
       <div class="block_headpicture img7"></div>
       <h2 class="text3">Шаверма с кусочками мяса</h2>
-      <p class="text5">Вы возможно видели уже похожую шаверму, но, боже, как вы сильно ошибаетесь: Это наш неповторимый вкус от сына маминой подруги, это наш великолепный дизайн от Илона Маска, и это наши великолепные кусочки мяса из магазига напротив. Совершенно другой опыт в сфере шаверм.</p>
+      <p class="text5">Вы возможно видели уже похожую шаверму, но, боже, как вы сильно ошибаетесь: Это наш неповторимый вкус от сына маминой подруги, это наш великолепный дизайн от Илона Маска, и это наши великолепные кусочки мяса из магазина напротив. Совершенно другой опыт в сфере шаверм.</p>
       <div class="space"></div>
       <a href="bought.html"><button class="buy_button">Купить за 7543 руб.</button></a>
       <div class="space"></div>
